--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-awesome-dashboard",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://nguyenthong123.github.io/my-awesome-dashboard",
+  "homepage": "https://www.dunvex.com",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
