--- a/package.json
+++ b/package.json
@@ -2,31 +2,19 @@
   "name": "my-awesome-dashboard",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://www.dunvex.com",
   "dependencies": {
-    "@cloudinary/url-gen": "^1.22.0",
-    "@emailjs/browser": "^4.4.1",
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "chart.js": "^4.5.1",
-    "react": "^19.2.0",
-    "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.2.0",
-    "react-ga4": "^2.1.0",
-    "react-router-dom": "^7.9.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
-    "react-select": "^5.10.2",
+    "@emailjs/browser": "^3.11.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -45,8 +33,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^6.3.0"
   }
 }
